SyntaxChecker.java
/* Generated By:JavaCC: Do not edit this line. SyntaxChecker.java */
import java.util.*;

public class SyntaxChecker implements SyntaxCheckerConstants {
    public static ArrayList<String> functions = new ArrayList<String>();
    public static HashMap<String, Exp> fMap = new HashMap<String, Exp>();
    public static ArrayList<String> functionCalls = new ArrayList<String>();
    public static ArrayList<String> parametersAll = new ArrayList<String>();
    public static ArrayList<String> parametersWithinBody = new ArrayList<String>();

    public static HashMap<String, Function> functionMap = new HashMap<String, Function>();

    public static Stack<FunctionCall> calls = new Stack<FunctionCall>();

    // MAKE A HASHMAP FUNCTIONAME - PARAM NAME or smth
    private static final String operators = "+*";
    private static final String operands = "0123456789";
    public static void main(String[] args) throws ParseException {
        try {
            Exp res = new SyntaxChecker(System.in).parse();

            System.out.println("Result of parse: "+res);
            System.out.println("PASS\n");

            // res.toString();
            // System.out.println();

            System.out.println(evaluatePostfix(res.toString()));
        } catch (ParseException e) {
            // Catching Throwable is ugly but JavaCC throws Error objects!
            System.out.println("FAIL");
            // e.printStackTrace();
        } catch (StackOverflowError n) {
            //
            System.out.println("DIVERGENCE");
            // n.printStackTrace();
        }
    }

    public static int evaluatePostfix(String postfixExpr) {
        char[] chars = postfixExpr.toCharArray();
        Stack<Integer> stack = new Stack<Integer>();
        char last = ' ';
        for (char c : chars) {
            if (isOperand(c)) {
                if (isOperand(last))
                    stack.push(10*(stack.pop() + (c - '0')));
                else
                    stack.push(c - '0'); // convert char to int val
            } else if (isOperator(c)) {
                int op1 = stack.pop();
                int op2 = stack.pop();
                int result;
                switch (c) {
                case '*':
                    result = op1 * op2;
                    stack.push(result);
                    break;
                case '+':
                    result = op1 + op2;
                    stack.push(result);
                    break;
                }
            }

            last = c;
            //print last 
            // System.out.println("Previous character: "+last);
        }
        return stack.pop();
    }

    private static boolean isOperator(char val) {
                    return operators.indexOf(val) >= 0;
    }

    private static boolean isOperand(char val) {
                    return operands.indexOf(val) >= 0;
    }

  static final public Exp parse() throws ParseException {
    start();
    jj_consume_token(0);
        if (!functions.contains("MAIN")) {
            {if (true) throw new ParseException("Every program must define the MAIN function");}
        }

        for (String function : functionCalls) {
            if (!functions.contains(function)) {
                {if (true) throw new ParseException("A call has been made to a non-defined function.");}
            }
        }

        {if (true) return functionMap.get("MAIN").getBody();}
    throw new Error("Missing return statement in function");
  }

  static final public void start() throws ParseException, ParseException {
    String functionName = "";
    Token t = null;
    Token param = null;
    String p = "";
    Exp exp = null;
    Exp fbody = null;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DEFINE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(DEFINE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCTION_NAME:
        t = jj_consume_token(FUNCTION_NAME);
              functionName = t.image;
        jj_consume_token(SPACE);
        param = jj_consume_token(PARAMETER_NAME);
        fbody = normal_function();
                                                                         p = param.image;
        break;
      case DEFINE:
        jj_consume_token(DEFINE);
        param = jj_consume_token(PARAMETER_NAME);
        fbody = normal_function();
                                                                          p = param.image;
              functionName = "DEF";
        break;
      case MAIN:
        exp = main_function();
              functionName = "MAIN"; fbody = exp; p = "";
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
            // If the function was previously declared throw a ParseException as only one declaration is allowed
            if (functions.contains(functionName)) {
                {if (true) throw new ParseException("A function can only be defined once");}
                /* throw ParseException; System.err.println(" "); */
            }
            // Add the function name to the arraylist of functions
            else {
                functions.add(functionName);
                functionMap.put(functionName, new Function(fbody, p));
            }
      try {
        jj_consume_token(EOL);
      } catch (ParseException e) {
            System.err.println("[LEXING ERROR] Invalid line terminator.");
            {if (true) throw e;}
            System.exit(0);
      }
    }
  }

//void normal_function(): {} { (<DEF>" "<FUNCTION_NAME>" "<PARAMETER_NAME>" "<LBRACE>" "E()" "<RBRACE>" "";"<EOL>)* <EOF> }
// Recognises function declarations
  static final public Exp normal_function() throws ParseException, ParseException {
    Exp exp;
    try {
      exp = function_body();
          {if (true) return exp;}
    } catch (ParseException e) {
        System.err.println("[PARSING ERROR] Incorrect parameter name.");
        {if (true) throw e;}
        System.exit(0);
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp main_function() throws ParseException {
    Exp exp;
    jj_consume_token(MAIN);
    exp = function_body();
      {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp function_body() throws ParseException, ParseException {
    Exp exp;
    try {
      jj_consume_token(SPACE);
      jj_consume_token(LBRACE);
      jj_consume_token(SPACE);
      exp = E();
      jj_consume_token(SPACE);
      jj_consume_token(RBRACE);
      jj_consume_token(SPACE);
      jj_consume_token(SEMICOLON);
          {if (true) return exp;}
    } catch (ParseException e) {
        System.err.println("[PARSING ERROR] Incorrect function body formatting.");

        //print printStackTrace
        e.printStackTrace();

        {if (true) throw e;}
        System.exit(0);
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp E() throws ParseException {
           Exp e1, e2;
    e1 = T();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 5:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(5);
      e2 = T();
                                                    e1 = new BinaryExp("+", e1, e2);
    }
                                                                                            {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp T() throws ParseException {
           Exp e1, e2;
    e1 = F();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      jj_consume_token(6);
      e2 = F();
                                                    e1 = new BinaryExp("*", e1, e2);
    }
                                                                                            {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// Recognises function calls
  static final public Exp function_call() throws ParseException, ParseException {
    String functionName = "";
    Token t;
    Exp exp;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCTION_NAME:
        t = jj_consume_token(FUNCTION_NAME);
                               functionName = t.image;
        break;
      case DEF:
        jj_consume_token(DEF);
                functionName = "DEF";
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          functionCalls.add(functionName);
      jj_consume_token(3);
      exp = E();
      jj_consume_token(4);
                {if (true) return new FunctionCall(functionName, exp);}
    } catch (ParseException e) {
        System.err.println("[PARSING ERROR] Incorrect function call.");
        {if (true) throw e;}
        System.exit(0);
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp F() throws ParseException, ParseException {
    Exp exp;
    Token num;
    Token param;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
        num = jj_consume_token(NUM);
                      {if (true) return new Num(Integer.parseInt(num.image));}
        break;
      case PARAMETER_NAME:
        param = jj_consume_token(PARAMETER_NAME);
                                   parametersWithinBody.add(param.image); {if (true) return new Param(param.image);}
        break;
      case DEF:
      case FUNCTION_NAME:
        exp = function_call();
                                {if (true) return exp;}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
        System.err.println("[PARSING ERROR] Expected a numerical value, a parameter or a function call.");
        {if (true) throw e;}
        System.exit(0);
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public SyntaxCheckerTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[6];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x20000,0x20600,0x20,0x40,0x500,0xd80,};
   }

  /** Constructor with InputStream. */
  public SyntaxChecker(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public SyntaxChecker(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new SyntaxCheckerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public SyntaxChecker(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new SyntaxCheckerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public SyntaxChecker(SyntaxCheckerTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(SyntaxCheckerTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[18];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 6; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 18; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}

class Function {
    Exp body;
    String parameter;

    Function(Exp body, String p) { this.body = body; this.parameter = p; }
    public Exp getBody() { return body; }
    public String getParameter() { return parameter; }

}

abstract class Exp {}
class Num extends Exp {
    int value;
    Num (int v) { this.value = v; }
    public String toString() { return value + ""; }
}

class Param extends Exp {
    String param;
    Param (String p) { this.param = p; }
    public String toString() { return param; }
    public String getParam() { return this.param; }
}

class FunctionCall extends Exp {
    String functionName;
    Exp functionArgument;
    FunctionCall (String name, Exp argument) { this.functionName = name; this.functionArgument = argument; }
    private String replaceParameter() {
        if (SyntaxChecker.calls.search(this) > -1) {
            System.out.println("CYCLE DETECTED");
            throw new StackOverflowError("CYCLE DETECTED");
        }

        SyntaxChecker.calls.push(this);
        //(functionName);

        String body = SyntaxChecker.functionMap.get(functionName).getBody().toString();
        String parameter = SyntaxChecker.functionMap.get(functionName).getParameter();
        String x = "";
        x = body.replaceAll(parameter, functionArgument.toString());

        SyntaxChecker.calls.pop();
        // System.out.println("function - " + functionName + " - argument - " + functionArgument.toString());

        return x;
    }
    public String toString() { return replaceParameter(); }
}

class BinaryExp extends Exp {
    String op;
    Exp left, right;
    BinaryExp(String op, Exp left, Exp right) {
        this.op = op;
        this.left = left;
        this.right = right;
    }
    public String toString() {
        return "(" + left.toString() + "|" + right.toString() + op + ")";
    }
}
